Fix hotkey being visible while navigating browser history

--- a/src/docs_website/assets/style/style.css
+++ b/src/docs_website/assets/style/style.css
@@ -278,6 +278,10 @@ nav.left-pane {
 
   &.search-active {
     .search-box {
+      .hotkey {
+        display: none;
+      }
+
       .clear-button {
         display: block;
       }
